Archive2/80/0f48d909f51af8/output
main.cpp:11:5: error: no matching function for call to 'bar'
    bar(0);
    ^~~
main.cpp:7:6: note: candidate template ignored: couldn't infer template argument 'T'
void bar(typename foo<T>::type);
     ^
1 error generated.
